getting ready to deploy

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-DATABASE_URL="file:./dev.db"
+# Database (Neon Postgres)
+# Get these from your Neon dashboard: https://console.neon.tech
+# DATABASE_URL uses the pooled connection (-pooler suffix)
+# DIRECT_URL uses the direct connection (for migrations)
+DATABASE_URL="postgresql://[user]:[password]@[endpoint]-pooler.[region].aws.neon.tech/[database]?sslmode=require"
+DIRECT_URL="postgresql://[user]:[password]@[endpoint].[region].aws.neon.tech/[database]?sslmode=require"
 
-# Add your API keys here
+# API Keys
 OPENAI_API_KEY=sk-...
 BRAINTRUST_API_KEY=bt-...
