--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eval": "npx braintrust eval evals/conversation.eval.ts"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^5.22.0",
     "@tailwindcss/typography": "^0.5.19",
     "ai": "^6.0.41",
@@ -32,7 +33,8 @@
     "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "vercel": "^50.9.6"
   },
   "devDependencies": {
     "@types/node": "^20",
